--- a/jupyter_ml/pyproject.toml
+++ b/jupyter_ml/pyproject.toml
@@ -11,17 +11,8 @@ transformers = "^4.34.0"
 jupyterlab = "^4.0.7"
 matplotlib = "^3.8.0"
 ipywidgets = "^8.1.1"
-torch = [
-  {version = "^2.1.0", platform = "darwin"},
-  {version = "^2.1.0+cu118", platform = "windows", source = "torch-cuda11.8"},
-  {version = "^2.1.0+cu118", platform = "linux", source = "torch-cuda11.8"}
-]
+torch = "^2.1.1"
 python-dotenv = "^1.0.0"
-
-[[tool.poetry.source]]
-name = "torch-cuda11.8"
-url = "https://download.pytorch.org/whl/cu118"
-priority = "supplemental"
 
 [build-system]
 requires = ["poetry-core>=1.6.1"]
