--- a/llm/simple_local_model/pyproject.toml
+++ b/llm/simple_local_model/pyproject.toml
@@ -5,8 +5,18 @@ description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+# [[tool.poetry.source]]
+# name = "devpi"
+# url = "http://127.0.0.1:3141/root/pypi/+simple/"
+# priority = "primary"
+# Disable PyPI and uncomment this to use devpi local library cache
+
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.11.7"
 transformers = "^4.34.0"
 torch = "^2.1.1"
 python-dotenv = "^1.0.0"
@@ -19,5 +29,5 @@ mypy = "^1.7.0"
 black = "^23.11.0"
 
 [build-system]
-requires = ["poetry-core>=1.6.1"]
+requires = ["poetry-core>=1.8.3"]
 build-backend = "poetry.core.masonry.api"
