--- a/llm/gradio_openai/makefile
+++ b/llm/gradio_openai/makefile
@@ -29,26 +29,10 @@ info:
 	poetry run poetry env info -p
 
 delete:
-	poetry env remove python
+	poetry env remove --all
 
 size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry run poetry env info --path 2>/dev/null)
-
-# Container targets ------------------------------------------
-
-CONTAINER_IMAGE=quay.io/vicenteherrera/llama2
-
-# Check if sudo is required to run Docker
-RUNSUDO := $(shell groups | grep ' docker ' 1>/dev/null || echo "sudo")
-
-# https://docs.docker.com/engine/install/debian/#install-using-the-repository
-
-.PHONY: container-build
-# build the container image
-container-build:
-	@echo "Building container image"
-	@${RUNSUDO} docker buildx build . -f containerfile -t ${CONTAINER_IMAGE} --build-arg YOUR_HOME="$$HOME"
-
-container-run:
-	@${RUNSUDO} docker run -i -t ${CONTAINER_IMAGE} poetry run python ./src/app.py
+	@echo "Size of devpi cache"
+	@du -sh $$HOME/.devpi/server
