--- a/llm/gradio_openai/pyproject.toml
+++ b/llm/gradio_openai/pyproject.toml
@@ -5,8 +5,19 @@ description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+# [[tool.poetry.source]]
+# name = "devpi"
+# url = "http://127.0.0.1:3141/root/pypi/+simple/"
+# priority = "primary"
+# Disable PyPI and uncomment this to use devpi local library cache
+
+
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.11.7"
 openai = "^1.30.1"
 gradio = "^4.31.4"
 
@@ -16,5 +27,5 @@ mypy = "^1.7.0"
 black = "^23.11.0"
 
 [build-system]
-requires = ["poetry-core>=1.6.1"]
+requires = ["poetry-core>=1.8.3"]
 build-backend = "poetry.core.masonry.api"
