--- a/llm/containerize_model/pyproject.toml
+++ b/llm/containerize_model/pyproject.toml
@@ -5,18 +5,33 @@ description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+# [[tool.poetry.source]]
+# name = "devpi"
+# url = "http://127.0.0.1:3141/root/pypi/+simple/"
+# priority = "primary"
+# Disable PyPI and uncomment this to use devpi local library cache
+
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "3.11.7"
 transformers = "^4.34.0"
-torch = "^2.1.1"
 outlines = "^0.0.9"
 accelerate = "^0.24.1"
+huggingface-hub = "^0.23.2"
+torch = "^2.3.0"
+pyinstaller = "^6.7.0"
+nuitka = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
 mypy = "^1.7.0"
 black = "^23.11.0"
+pip-tools = "^7.4.1"
+huggingface-hub = {extras = ["cli"], version = "^0.23.2"}
 
 [build-system]
-requires = ["poetry-core>=1.6.1"]
+requires = ["poetry-core>=1.8.3"]
 build-backend = "poetry.core.masonry.api"
