--- a/llm/_security/llm-guard-openai/pyproject.toml
+++ b/llm/_security/llm-guard-openai/pyproject.toml
@@ -5,6 +5,16 @@ description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
+[[tool.poetry.source]]
+name = "PyPI"
+priority = "primary"
+
+# [[tool.poetry.source]]
+# name = "devpi"
+# url = "http://127.0.0.1:3141/root/pypi/+simple/"
+# priority = "primary"
+# Disable PyPI and uncomment this to use devpi local library cache
+
 [tool.poetry.dependencies]
 python = "==3.11.7"
 llm-guard = "^0.3.13"
@@ -18,5 +28,5 @@ mypy = "^1.7.0"
 black = "^23.11.0"
 
 [build-system]
-requires = ["poetry-core>=1.6.1"]
+requires = ["poetry-core>=1.8.3"]
 build-backend = "poetry.core.masonry.api"
