--- a/jupyter_ml/makefile
+++ b/jupyter_ml/makefile
@@ -1,5 +1,5 @@
 
-all: requirements install_python install jupyter
+all: requirements install_python install required_python jupyter
 
 jupyter:
 	poetry run jupyter-lab
@@ -13,6 +13,24 @@ install_python:
 requirements:
 	which pyenv
 	which poetry
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
+
+refresh: delete_venv
+	pyenv uninstall -f $$(cat .python-version)
+	pyenv install $$(cat .python-version)
+	rm poetry.lock
+	poetry install --no-root
 
 # Libraries utilities ----------------------------------------
 
@@ -28,30 +46,12 @@ show:
 info:
 	poetry run poetry env info -p
 
-delete:
-	poetry env remove python
-	rm -r $$HOME/.cache/huggingface/
+delete: delete-venv
+
+delete-venv:
+	poetry env remove --all ||:/
 
 size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry run poetry env info --path 2>/dev/null)
-	@echo "Size of models"
-	@du -sh $$HOME/.cache/huggingface/
 
-# Container targets ------------------------------------------
-
-CONTAINER_IMAGE=quay.io/vicenteherrera/starter-ml
-
-# Check if sudo is required to run Docker
-RUNSUDO := $(shell groups | grep ' docker ' 1>/dev/null || echo "sudo")
-
-# https://docs.docker.com/engine/install/debian/#install-using-the-repository
-
-.PHONY: container-build
-# build the container image
-container-build:
-	@echo "Building container image"
-	@${RUNSUDO} docker buildx build . -f containerfile -t ${CONTAINER_IMAGE} --build-arg YOUR_HOME="$$HOME" --build-context huggingface="$$HOME/.cache/huggingface"
-
-container-run:
-	@${RUNSUDO} docker run -i -t ${CONTAINER_IMAGE} poetry run python ./starter_ml/hugging-face.py
