--- a/jupyter_ml/pyproject.toml
+++ b/jupyter_ml/pyproject.toml
@@ -1,19 +1,18 @@
 [tool.poetry]
-name = "starter-ml"
+name = "jupyter_ml"
 version = "0.1.0"
 description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-transformers = "^4.34.0"
-jupyterlab = "^4.0.7"
-matplotlib = "^3.8.0"
-ipywidgets = "^8.1.1"
-torch = "^2.1.1"
-python-dotenv = "^1.0.0"
+python = "^3.11.7"
+transformers = "^4.41.2"
+jupyterlab = "^4.2.1"
+matplotlib = "^3.9.0"
+ipywidgets = "^8.1.3"
+torch = "^2.3.0"
 
 [build-system]
-requires = ["poetry-core>=1.6.1"]
+requires = ["poetry-core>=1.8.3"]
 build-backend = "poetry.core.masonry.api"
