--- a/llm/_security/simple_garak/makefile
+++ b/llm/_security/simple_garak/makefile
@@ -1,4 +1,7 @@
 
+code:
+	poetry run code .
+
 # Using pipx
 
 install_garak:
@@ -23,17 +26,35 @@ run-oa-gpt3.5-turbo:
 list-probes:
 	poetry run garak --list_probes
 
-# -----------------------------------------------------------------------
-
-install_python:
-	pyenv install $$(cat .python-version) -s
-
-code:
-	poetry run code .
+# requirements ----------------------------------------------------------------
 
 requirements:
 	which pyenv
 	which poetry
+
+install_python: upgrade_pyenv
+	pyenv install $$(cat .python-version) -s
+
+upgrade_pyenv:
+	cd $$HOME/.pyenv && git pull
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
+
+refresh: delete_venv
+	pyenv uninstall -f $$(cat .python-version)
+	pyenv install $$(cat .python-version)
+	rm poetry.lock
+	poetry install --no-root
 
 # Libraries utilities ----------------------------------------
 
@@ -49,15 +70,19 @@ show:
 info:
 	poetry run poetry env info -p
 
-delete:
+delete: delete-venv delete-huggingface-home
+
+delete-venv:
 	poetry env remove --all ||:
+
+delete-huggingface-home:
 	rm -r $$HOME/.cache/huggingface/ ||:
 
 size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry env info --path 2>/dev/null)
 	@echo "Size of models"
-	@du -sh $$HOME/.cache/huggingface/
+	@du -sh $$HOME/.cache/huggingface/ ||:
 	@echo "Size of devpi cache"
-	@du -sh $$HOME/.devpi/server
+	@du -sh $$HOME/.devpi/server ||:
 
