--- a/llm/containerize_model/makefile
+++ b/llm/containerize_model/makefile
@@ -1,3 +1,5 @@
+SHELL := /bin/bash
+
 # Torch based models (.bin) require online connection so transformers library
 # convert them, you never can just download files for offline use
 # MODEL=lysandre/arxiv-nlp
@@ -10,9 +12,12 @@ REVISION=main
 
 CONTAINER_IMAGE=quay.io/vicenteherrera/llm-test
 
-SHELL := /bin/bash
+all: requirements install_python install required_python download run-offline size
 
-all: requirements install_python install download run-offline size
+code:
+	poetry run code .
+
+# run ----------------------------------------------------------------
 
 run: run-offline
 
@@ -39,20 +44,13 @@ run-offline-local-bin:
 	MODEL="${MODEL}" REVISION="${REVISION}" \
 	./bin/dist/app
 
-generate-base-req:
-	@poetry run pip-compile --generate-hashes base_requirements/poetry.in -o base_requirements/poetry.out
-	@poetry run pip-compile --generate-hashes base_requirements/pyinstaller.in -o base_requirements/pyinstaller.out
-	@poetry run pip-compile --generate-hashes base_requirements/nuitka.in -o base_requirements/nuitka.out
-
-compile:
-	@mkdir -p bin && cd bin  && \
-	time poetry run pyinstaller --onefile pyinstaller ../src/app.py
-
+# download ----------------------------------------------------------------
 
 download: download-local
 
 download-local:
 	source env.txt && \
+	HF_HOME='./.cache/huggingface/' \
 	poetry run huggingface-cli download --token=$$HUGGINGFACE_TOKEN \
 		"${MODEL}" \
 		--revision "${REVISION}" \
@@ -71,19 +69,40 @@ download-home:
 		--revision "${REVISION}" \
 		--include "${MODEL_EXT}" "*.json" "tokenizer.model" "*.txt"
 
-# -------------------------------------
+# Generate requirements hashes and compile -----------------------------------------
 
-install_python:
-	pyenv install $$(cat .python-version) -s
+generate-base-req:
+	@poetry run pip-compile --generate-hashes base_requirements/poetry.in -o base_requirements/poetry.out
+	@poetry run pip-compile --generate-hashes base_requirements/pyinstaller.in -o base_requirements/pyinstaller.out
+	@poetry run pip-compile --generate-hashes base_requirements/nuitka.in -o base_requirements/nuitka.out
 
-code:
-	poetry run code .
+compile:
+	@mkdir -p bin && cd bin  && \
+	time poetry run pyinstaller --onefile pyinstaller ../src/app.py
+
+# requirements ----------------------------------------------------------------
 
 requirements:
 	which pyenv
 	which poetry
-	which huggingface-cli
-	test -f ./env.txt
+
+install_python: upgrade_pyenv
+	pyenv install $$(cat .python-version) -s
+
+upgrade_pyenv:
+	cd $$HOME/.pyenv && git pull
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
 
 refresh: delete_venv
 	pyenv uninstall -f $$(cat .python-version)
@@ -91,9 +110,16 @@ refresh: delete_venv
 	rm poetry.lock
 	poetry install --no-root
 
+# Security ---------------------------------------------------
 
 vulnerability-scan:
 	trivy filesystem poetry.lock --scanners vuln
+
+digest:
+	@DIR="./.cache" && echo "Calculating hash of files in $$DIR"
+	find $$DIR -type f -exec sha1sum "$$PWD"/{} \; 
+	@DIR="./.cache" && echo "Calculating global hash of $$DIR"
+	find $$DIR -type f \( -exec sha1sum "$$PWD"/{} \; \) | awk '{print $1}' | sort | sha1sum
 
 # Libraries utilities ----------------------------------------
 
@@ -127,44 +153,37 @@ size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry env info --path 2>/dev/null)
 	@echo "Size of ./bin"
-	@du -sh ./bin/
+	@du -sh ./bin/ ||:
 	@echo "Size of models in ./.cache/huggingface/"
-	@du -sh ./.cache/huggingface/
+	@du -sh ./.cache/huggingface/ ||:
 	@echo "Size of models in $$HOME/.cache/huggingface/hub"
-	@du -sh $$HOME/.cache/huggingface/hub
+	@du -sh $$HOME/.cache/huggingface/hub ||:
 	@echo "Size of devpi cache"
-	@du -sh $$HOME/.devpi/server
+	@du -sh $$HOME/.devpi/server ||:
 	@echo "Container images"
 	@${RUNSUDO} docker image ls
-
-digest:
-	@DIR="./.cache" && echo "Calculating hash of files in $$DIR"
-	find $$DIR -type f -exec sha1sum "$$PWD"/{} \; 
-	@DIR="./.cache" && echo "Calculating global hash of $$DIR"
-	find $$DIR -type f \( -exec sha1sum "$$PWD"/{} \; \) | awk '{print $1}' | sort | sha1sum
 
 # Container targets ------------------------------------------
 
 # Check if sudo is required to run Docker
 RUNSUDO := $(shell groups | grep ' docker \|com\.apple' 1>/dev/null || echo "sudo")
 
-# https://docs.docker.com/engine/install/debian/#install-using-the-repository
-
 # Vulnerability scan
 container-vulnerability-scan:
 	trivy image ${CONTAINER_IMAGE} --scanners vuln
 # This is super-slow, it never ends
-
-
-# Not puting the model in the container ---------------------
-
-# https://stackoverflow.com/questions/59691207/docker-build-with-nvidia-runtime
 
 container-validate-base:
 	@${RUNSUDO} docker pull gcr.io/distroless/python3-debian12  && \
 	${RUNSUDO} /home/vicente/.go/bin/cosign verify gcr.io/distroless/python3-debian12 -\
 		--certificate-oidc-issuer https://accounts.google.com \
 		--certificate-identity keyless@distroless.iam.gserviceaccount.com
+
+# TODO: Validate each base container image
+
+# Not puting the model in the container ---------------------
+
+# TODO: Add nvidia capabilities https://stackoverflow.com/questions/59691207/docker-build-with-nvidia-runtime
 
 # Build container without model
 container-build-no-model:
@@ -203,6 +222,7 @@ container-run-no-model-volume:
 # https://forums.docker.com/t/we-cant-push-a-docker-volume-so-now-what/56160/2
 
 
+
 # Copy or download the model inside the container ------------------------------------
 
 # Build container by copying model from home cache folder
@@ -216,6 +236,7 @@ container-build-copy-home: download-home
 		--build-arg REVISION="${REVISION}"
 # If you do this, you may end up copying extra models unless you first delete HG cache.
 # You need buildx to be able to copy files outside current directory.
+# https://docs.docker.com/engine/install/debian/#install-using-the-repository
 
 # Build container by copying model from local folder
 container-build-copy-local: download-local
@@ -252,6 +273,7 @@ container-build-download-py:
 # Run container with model
 container-run:
 	@${RUNSUDO} docker run -i -t ${CONTAINER_IMAGE}
+
 
 # Test container builds -------------------------------------------------
 
