--- a/llm/gradio_local_model/makefile
+++ b/llm/gradio_local_model/makefile
@@ -4,15 +4,38 @@ all: requirements install_python install run size
 run:
 	poetry run python ./src/app.py
 
-install_python:
-	pyenv install $$(cat .python-version) -s
-
 code:
 	poetry run code .
+
+# requirements ----------------------------------------------------------------
 
 requirements:
 	which pyenv
 	which poetry
+
+install_python: upgrade_pyenv
+	pyenv install $$(cat .python-version) -s
+
+upgrade_pyenv:
+	cd $$HOME/.pyenv && git pull
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
+
+refresh: delete_venv
+	pyenv uninstall -f $$(cat .python-version)
+	pyenv install $$(cat .python-version)
+	rm poetry.lock
+	poetry install --no-root
 
 # Libraries utilities ----------------------------------------
 
@@ -40,6 +63,6 @@ size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry env info --path 2>/dev/null)
 	@echo "Size of models"
-	@du -sh $$HOME/.cache/huggingface/
+	@du -sh $$HOME/.cache/huggingface/ ||:
 	@echo "Size of devpi cache"
-	@du -sh $$HOME/.devpi/server
+	@du -sh $$HOME/.devpi/server ||:
