--- a/llm/streamlit_openai_agents/makefile
+++ b/llm/streamlit_openai_agents/makefile
@@ -1,18 +1,41 @@
 
-all: requirements install_python install run size
+all: requirements install_python install required_python run size
 
 run:
 	poetry run streamlit run ./src/app.py
 
-install_python:
-	pyenv install $$(cat .python-version) -s
-
 code:
 	poetry run code .
+
+# requirements ----------------------------------------------------------------
 
 requirements:
 	which pyenv
 	which poetry
+
+install_python: upgrade_pyenv
+	pyenv install $$(cat .python-version) -s
+
+upgrade_pyenv:
+	cd $$HOME/.pyenv && git pull
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
+
+refresh: delete_venv
+	pyenv uninstall -f $$(cat .python-version)
+	pyenv install $$(cat .python-version)
+	rm poetry.lock
+	poetry install --no-root
 
 # Libraries utilities ----------------------------------------
 
@@ -33,9 +56,8 @@ delete: delete-venv
 delete-venv:
 	poetry env remove --all ||:
 
-
 size:
 	@echo "Size of libraries"
 	@du -sh $$(poetry env info --path 2>/dev/null)
 	@echo "Size of devpi cache"
-	@du -sh $$HOME/.devpi/server
+	@du -sh $$HOME/.devpi/server ||:
