--- a/llm/client_server_openai/makefile
+++ b/llm/client_server_openai/makefile
@@ -1,5 +1,5 @@
 
-all: requirements install_python install run size
+all: requirements install_python install required_python run size
 
 run:
 	@echo "To run the server, use: make run_server"
@@ -13,16 +13,38 @@ run_client:
 	@echo "Execute also server on another terminal with: make run_client"
 	@poetry run streamlit run ./src/openai_llm_client.py
 
-
-install_python:
-	pyenv install $$(cat .python-version) -s
-
 code:
 	poetry run code .
+
+# requirements ----------------------------------------------------------------
 
 requirements:
 	which pyenv
 	which poetry
+
+install_python: upgrade_pyenv
+	pyenv install $$(cat .python-version) -s
+
+upgrade_pyenv:
+	cd $$HOME/.pyenv && git pull
+
+required_python:
+	@PVPOETRY="$$(poetry run python --version)" && \
+	PVPOETRY=$${PVPOETRY#"Python "} && \
+	PV="$$(cat .python-version)" && \
+	if [ "$$PVPOETRY" != "$$PV" ]; then \
+		echo "**Error, Python version mismatch" && \
+		echo ".python-version file: $$PV" && \
+		echo "poetry run python --version: $$PVPOETRY" && \
+		echo "Run make refresh and check your pyenv path configuration" && \
+		exit 1; \
+	fi
+
+refresh: delete_venv
+	pyenv uninstall -f $$(cat .python-version)
+	pyenv install $$(cat .python-version)
+	rm poetry.lock
+	poetry install --no-root
 
 # Libraries utilities ----------------------------------------
 
@@ -38,8 +60,10 @@ show:
 info:
 	poetry run poetry env info -p
 
-delete:
-	poetry env remove --all
+delete: delete-venv delete-huggingface-home
+
+delete-venv:
+	poetry env remove --all ||:
 
 size:
 	@echo "Size of libraries"
