--- a/jupyter_ml/pyproject.toml
+++ b/jupyter_ml/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11.7"
-transformers = "^4.41.2"
-jupyterlab = "^4.2.1"
+python = "3.11.7"
+jupyterlab = "^4.2.2"
+numpy = "^1.26.4"
 matplotlib = "^3.9.0"
+tabulate = "^0.9.0"
 ipywidgets = "^8.1.3"
-torch = "^2.3.0"
+python-dotenv = "^1.0.1"
+transformers = "^4.41.2"
+torch = "^2.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.8.3"]
