feat: separated directories for client/server example

--- a/llm/client_server_openai/makefile
+++ b/llm/client_server_openai/makefile
@@ -1,72 +1,25 @@
+SHELL := /bin/bash
 
-all: requirements install_python install required_python run size
+all: requirements
+	make -s install_python install -C ./backend -f ../makefile
+	make -s install_python install -C ./frontend -f ../makefile
+	@make -s help
 
-run:
-	@echo "To run the server, use: make run_server"
-	@echo "To run the client, use: make run_client"
+run: help
 
-run_server:
-	@echo "Execute also client on another terminal with: make run_client"
-	@poetry run python ./src/openai_llm_server.py
+help:
+	@echo "To run the backend, use: make run_backend"
+	@echo "To run the frontend, use: make run_frontend"
 
-run_client:
-	@echo "Execute also server on another terminal with: make run_server"
-	@poetry run streamlit run ./src/openai_llm_client.py
+run_backend:
+	@echo "Execute also client on another terminal with: make run_frontend"
+	@source "$$(for p in "env.txt" "../env.txt" "../../env.txt" "../../../env.txt"; do [[ -f "$p" ]] && echo "$$p" && break; done || echo "/dev/null")" && \
+	cd backend && poetry run python ./src/openai_llm_server.py
+
+run_frontend:
+	@echo "Execute also server on another terminal with: make run_backend"
+	@source "$$(for p in "env.txt" "../env.txt" "../../env.txt" "../../../env.txt"; do [[ -f "$p" ]] && echo "$$p" && break; done || echo "/dev/null")" && \
+	cd frontend && poetry run streamlit run ./src/openai_llm_client.py
 
 code:
 	poetry run code .
-
-# requirements ----------------------------------------------------------------
-
-requirements:
-	which pyenv
-	which poetry
-
-install_python: upgrade_pyenv
-	pyenv install $$(cat .python-version) -s
-
-upgrade_pyenv:
-	cd $$HOME/.pyenv && git pull
-
-required_python:
-	@PVPOETRY="$$(poetry run python --version)" && \
-	PVPOETRY=$${PVPOETRY#"Python "} && \
-	PV="$$(cat .python-version)" && \
-	if [ "$$PVPOETRY" != "$$PV" ]; then \
-		echo "**Error, Python version mismatch" && \
-		echo ".python-version file: $$PV" && \
-		echo "poetry run python --version: $$PVPOETRY" && \
-		echo "Run make refresh and check your pyenv path configuration" && \
-		exit 1; \
-	fi
-
-refresh: delete_venv
-	pyenv uninstall -f $$(cat .python-version)
-	pyenv install $$(cat .python-version)
-	rm poetry.lock
-	poetry install --no-root
-
-# Libraries utilities ----------------------------------------
-
-install:
-	poetry install --no-root
-
-update:
-	poetry update
-
-show:
-	poetry show
-
-info:
-	poetry run poetry env info -p
-
-delete: delete_venv
-
-delete_venv:
-	poetry env remove --all ||:
-
-size:
-	@echo "Size of libraries"
-	@du -sh $$(poetry env info --path 2>/dev/null)
-	@echo "Size of devpi cache"
-	@du -sh $$HOME/.devpi/server ||:
