--- a/llm/client_server_openai/backend/pyproject.toml
+++ b/llm/client_server_openai/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gradio_openai"
+name = "openai_backend"
 version = "0.1.0"
 description = ""
 authors = ["Vicente Herrera <vicenteherrera@vicenteherrera.com>"]
@@ -16,14 +16,14 @@ priority = "primary"
 # Disable PyPI and uncomment this to use devpi local library cache
 
 [tool.poetry.dependencies]
-python = "^3.11.7"
-openai = "^1.30.1"
+python = "3.11.7"
+# openai = "^1.30.1"
 python-dotenv = "^1.0.1"
-streamlit = "^1.35.0"
-langchain = "^0.2.1"
 jsonify = "^0.5"
-langchain-community = "^0.2.1"
 flask = "^3.0.3"
+langchain-openai = "^0.1.8"
+# langchain-community = "^0.2.4"
+# langchain = "^0.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
