fix: frontend k8s service had backend manifest

--- a/llm/client_server_openai/k8s/svc-frontend.yaml
+++ b/llm/client_server_openai/k8s/svc-frontend.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-service
+  name: frontend-service
 spec:
   selector:
-    env: backend
+    env: frontend
   ports:
     - protocol: TCP
       port: 8501
-      targetPort: 8501
+      targetPort: 31045
   type: LoadBalancer
