--- a/jupyter_ml/pyproject.toml
+++ b/jupyter_ml/pyproject.toml
@@ -15,6 +15,9 @@ ipywidgets = "^8.1.3"
 python-dotenv = "^1.0.1"
 transformers = "^4.41.2"
 torch = "^2.3.1"
+pandas = "^2.2.2"
+seaborn = "^0.13.2"
+scipy = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core>=1.8.3"]
